# algo_lab1

./: CMakeLists.txt  main.cpp
sort_lib/: CMakeLists.txt  sort.cpp  sort.h
sort_tests/: CMakeLists.txt  sort_tests.cpp
